mesa (20.3.0-2) UNRELEASED; urgency=medium

  * rules: Fix the name of the broadcom vulkan driver.
  * control, rules: Drop llvm support from kfreebsd, as llvm isn't built
    there.
  * rules: Enable gallium swrast (softpipe) and OSMesa everywhere, as
    they're not actually tied to llvm being available.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 08 Dec 2020 09:03:41 +0200

mesa (20.3.0-1) experimental; urgency=medium

  * New upstream release.
  * rules: Enable v3dv on armhf/arm64, and zink where vulkan is
    available. (Closes: #975679)

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 07 Dec 2020 16:39:42 +0200

mesa (20.3.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 20 Nov 2020 17:00:27 +0200

mesa (20.3.0~rc1-1) experimental; urgency=medium

  * New upstream release candidate.
  * control: Add libxcb-shm0-dev to build-depends.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 11 Nov 2020 18:29:42 +0200

mesa (20.2.4-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 07 Dec 2020 15:11:48 +0200

mesa (20.2.3-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 25 Nov 2020 13:32:39 +0200

mesa (20.2.2-1) unstable; urgency=medium

  * New upstream release.
  * control: Enable libdrm-dev for Hurd. (Closes: #973673)
  * rules: Rework EGL_PLATFORMS to match current upstream defaults.
  * rules: Fix warnings from deprecated options. (Closes: #973675)

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 10 Nov 2020 22:38:16 +0200

mesa (20.2.1-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 15 Oct 2020 12:38:36 +0300

mesa (20.2.0-1) experimental; urgency=medium

  * New upstream release.
  * control: Add libclang-cpp11-dev to build-depends. (Closes: #954849)

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 29 Sep 2020 11:07:13 +0300
