@@ -46,6 +46,12 @@ else
 	DRI_DRIVERS += r200,r100
 	GALLIUM_DRIVERS += r600,r300
 
+	confflags_DIRECT_RENDERING = -Dglx-direct=true
+	confflags_GBM = -Dgbm=enabled
+	confflags_GALLIUM += -Dgallium-extra-hud=true
+	confflags_GALLIUM += -Dgallium-vdpau=enabled
+	confflags_GALLIUM += -Dlmsensors=enabled
+
   # radv needs LLVM and the Vulkan loader, so only build on the subset of
   # arches where we have LLVM enabled and where the Vulkan loader is built.
   ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64))
@@ -112,14 +118,8 @@ else
 	confflags_VULKAN += -Dvulkan-overlay-layer=true
   endif
 
-	confflags_DIRECT_RENDERING = -Dglx-direct=true
-	confflags_GBM = -Dgbm=enabled
-	confflags_GALLIUM += -Dgallium-extra-hud=true
-	confflags_GALLIUM += -Dgallium-vdpau=enabled
-	confflags_GALLIUM += -Dlmsensors=enabled
-
   ifeq (,$(filter pkg.mesa.nolibva,$(DEB_BUILD_PROFILES)))
-        confflags_GALLIUM += -Dgallium-va=enabled
+	confflags_GALLIUM += -Dgallium-va=enabled
   endif
 endif
 
